# quantmind

./: .gitignore  README.md  docker-compose.yml  quantmind-plan.md  render.yaml  vercel.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/agents/: __init__.py  backtest_agent.py  explainer_agent.py  rag_agent.py  research_agent.py  risk_agent.py  sentiment_agent.py  strategy_agent.py
backend/api/: __init__.py  main.py  schemas.py
backend/api/routes/: __init__.py  alerts.py  analysis.py  compare.py  earnings.py  live_chart.py  optimize.py  paper_trade.py  portfolio.py  ticker.py  walk_forward.py  whatif.py
backend/config/: __init__.py  logging_config.py  settings.py
backend/engine/: __init__.py  backtester.py  fast_segment_tree.py  live_trader.py  metrics.py  online_indicators.py  segment_tree.py  sliding_window.py  ssl_fix.py  walk_forward.py
backend/engine/strategies/: __init__.py  base_strategy.py  macd_strategy.py  mean_reversion.py  momentum.py  rsi_strategy.py
backend/graph/: __init__.py  state.py  workflow.py
backend/rag/: __init__.py  chunker.py  embeddings.py  ingestion.py  retriever.py  vector_store.py
backend/rag/sources/: __init__.py  base_loader.py  news_loader.py  pdf_loader.py  reddit_loader.py  sec_loader.py
backend/tests/: __init__.py
backend/tests/unit/: __init__.py  test_fast_segment_tree.py  test_live_trader.py  test_metrics.py  test_online_indicators.py  test_phase3_agents.py  test_rag_base_loader.py  test_rag_chunker.py  test_rag_retriever.py  test_segment_tree.py  test_sliding_window.py  (+1 more)
(+43 files in other folders)
